Replace demo#1 video by text

--- a/en/index.html
+++ b/en/index.html
@@ -143,10 +143,57 @@
                         </div>
                     </aside>
                 </a>
-                <video width="100%" height="auto" controls class="video-area">
-                    <source src="../assets/en/demo1.mov" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>   
+                <div class="text-area">
+                    <p>This demo is a reduced version of an <b>online store application.</b> </p>
+                    <p>This topic has been selected because it is a topic known to the entire public.</p>
+                    <p>Although conceptually the idea is simple, at a technological level it raises certain considerations and challenges.</p>
+                    <p>Next, we will present a <b>list of the topics discussed</b>:</p>                    
+                    <ul>
+                        <li>Origin of a software project</li>
+                        <li>Overview of the Inception phase (Miro)</li>
+                        <li>Customer influence (Impact Mapping)</li>
+                        <li>Modeling from the user's perspective (User Story Mapping)</li>
+                        <li>Project organization and planning (Jira)</li>                    
+                        <li>Application of Scrum methodology</li>
+                        <li>View from the product perspective (Product Roadmap, Product Backlog, Sprint Backlog, Sprints)</li>
+                        <li>System Features (User Stories)</li>
+                        <li>UX/UI (Figma). Design (Wireframes, Style Guide & Components, Layout & Prototype) Responsive look & feel: mobile, Tablet and desktop</li>
+                        <li>Web architecture concepts</li>
+                        <li>Development environment and project code management (Git, GitHub)</li>
+                        <li>Databases: MongoDB and MySQL.</li>
+                        <li>Document-oriented and relational NOSQL modeling. Approaches: ACID and BASE</li>
+                        <li>BackEnd and Front End application architecture</li>
+                        <li>Image processing</li>
+                        <li>Internal architectural aspects of Node.js and the Express.js framework.</li>
+                        <li>Generation of pages from the web server (EJS, Bootstrap)</li>
+                        <li>Upload files to web server (Multer)</li>
+                        <li>TypeScript core concepts (classes, generic programming)</li>
+                        <li>Apis testing (Postman)</li>
+                        <li>Interaction with the database (ODM “mongoose”, driver “mysql”)</li>
+                        <li>Security (encryption, Cors, JWT, RBAC/ABAC)</li>
+                        <li>Errors (exceptions, middlewares)</li>
+                        <li>Audit and debug information (Morgan, Winston)</li>
+                        <li>Emails (NodeMailer)</li>
+                        <li>BDD and TDD testing approaches (Moca, Chai and Supertest)</li>
+                        <li>Documentation automation (TypeDoc)</li>
+                        <li>Application of concepts: AJAX and SPA </li>
+                        <li>REACT.js Framework</li>
+                        <li>Componentization</li>
+                        <li>Routing</li>
+                        <li>Responsiveness</li>
+                        <li>Visual modeling (React Bootstrap)</li>
+                        <li>Forms</li>
+                        <li>Pop-up messages (Tostify)</li>
+                        <li>REST API (Axios)</li>
+                        <li>Rendering</li>
+                        <li>FrontEnd internal state (Redux, Session Storage)</li>
+                        <li>Development of a pagination model</li>
+                        <li>Deployment of the solution in the cloud. Database (MongoDBAtlas), BackEnd (Heroku), FrontEnd (Netlify)</li>
+                        <li>Automatic integration of GitHub with Cloud platforms</li>
+                    </ul>
+                    <p>I hope you find this proposal interesting.</p>
+                    <p>Thank you very much.</p>
+                </div>     
             </article>
             <article class="demos-space demo-lg-block demo-article">
             <a href="#demo-2" class="demo-card">
@@ -175,7 +222,8 @@
                 <p>It is presented from the global vision of the application architecture to implementation details, explaining in each step how the software technologies used in both the BackEnd and the FrontEnd have been applied.</p>
                 <p>I hope you find this proposal interesting.</p>
                 <p>Thank you very much.</p>
-            </div>            </article>
+            </div>            
+           </article>
             <article class="demos-space demo-lg-block demo-article">
                 <a href="#demo-3" class="demo-card">
                     <img src="../assets/minidev-logistic.png" alt="Demo #3">
