--- a/index.html
+++ b/index.html
@@ -143,10 +143,57 @@
                         </div>
                     </aside>
                 </a>
-                <video width="100%" height="auto" controls class="video-area">
-                    <source src="assets/es/demo1.mov" type="video/mp4">
-                    Tu navegador no soporta la exposicion de video.
-                </video>   
+                <div class="text-area">
+                    <p>El presente demo trata de una versión reducida de una <b>aplicación de tienda on-line.</b> </p>
+                    <p>Se ha seleccionado esta temática por ser un tema conocido por todo el público.</p>
+                    <p>Si bien conceptualmente la idea es sencilla, a nivel tecnológico plantea ciertas consideraciones y desafíos.</p>
+                    <p>A continuación, expondremos una <b>lista de los temas tratados</b>:</p>
+                    <ul>
+                        <li>Origen de un proyecto de software</li>
+                        <li>Visión general de la fase de Inception (Miro)</li>
+                        <li>Influenciamiento de clientes (Impact Mapping)</li>
+                        <li>Modelado desde la perspectiva del usuario (User Story Mapping)</li>
+                        <li>Organización y planificación del proyecto (Jira)</li>
+                        <li>Aplicación de metodología Scrum</li>
+                        <li>Visión desde la perspectiva del producto (Product Roadmap, Product Backlog, Sprint Backlog, Sprints)</li>
+                        <li>Características del sistema (User Stories)</li>
+                        <li>UX/UI (Figma). Diseño (Wireframes, Style Guide & Components, Layout & Prototype) Look & feel responsivo: mobile, Tablet y desktop</li>
+                        <li>Conceptos  de arquitectura web</li>
+                        <li>Entorno de desarrollo y la gestión del código del proyecto (Git, GitHub)</li>
+                        <li>Bases de datos: MongoDB y MySQL.</li>
+                        <li>Modelado NOSQL orientado a documentos y relacional. Enfoques: ACID y BASE</li>
+                        <li>Arquitectura aplicativa del BackEnd y Front End</li>
+                        <li>Tratamiento de imágenes</li>
+                        <li>Aspectos internos de arquitectura de Node.js y del framework  Express.js.</li>
+                        <li>Generación de páginas desde el servidor web (EJS, Bootstrap)</li>
+                        <li>Carga de archivos al servidor web (Multer)</li>
+                        <li>Conceptos centrales de TypeScript (clases, programación genérica)</li>
+                        <li>Testeo de Apis (Postman)</li>
+                        <li>Interacción con la base (ODM “mongoose”, driver “mysql”)</li>
+                        <li>Seguridad (encriptado, Cors, JWT, RBAC/ABAC)</li>
+                        <li>Errores (excepciones, middlewares)</li>
+                        <li>Información de auditoria y debug (Morgan, Winston)</li>
+                        <li>Correos electrónicos (NodeMailer)</li>
+                        <li>Enfoques  testing BDD y TDD (Moca, Chai y Supertest)</li>
+                        <li>Automatización de documentación (TypeDoc)</li>
+                        <li>Aplicación de conceptos: AJAX y SPA </li>
+                        <li>Framework REACT.js</li>
+                        <li>Componentización</li>
+                        <li>Ruteos</li>
+                        <li>Responsividad</li>
+                        <li>Modelado visual (React Bootstrap)</li>
+                        <li>Forms</li>
+                        <li>Mensajes emergentes (Tostify)</li>
+                        <li>REST API (Axios)</li>
+                        <li>Renderizado</li>
+                        <li>Estado interno FrontEnd (Redux, Session Storage)</li>
+                        <li>Desarrollo de un modelo de paginación</li>
+                        <li>Despliegue de la solución en la nube. Base de datos (MongoDBAtlas), BackEnd (Heroku), FrontEnd (Netlify)</li>
+                        <li>Integración automatica de GitHub con plataformas Cloud</li>
+                    </ul>
+                    <p>Espero que esta propuesta sea de tu agrado. </p>
+                    <p>Muchas gracias.</p>
+                </div>   
             </article>
             <article class="demos-space demo-lg-block demo-article">
             <a href="#demo-2" class="demo-card">
