Replace about video by text & remove CV

--- a/en/index.html
+++ b/en/index.html
@@ -111,15 +111,12 @@
             <p>
                 Evaluation of RFC and preparation of Technical Proposals.
             </p>
-            <div class="text-center text-lg-center">
-                <a class="btn" href="../assets/en/CV-online-en.pdf" target="_blank" rel="noopener">Download CV</a>
-            </div>
         </article>
-        <article class="video-about">
-            <video width="100%" height="auto" controls>
-                <source src="../assets/en/main-video-en.mov" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>   
+        <article class="text-center text-lg-center article-about">
+            <p><b>Space intended for sharing specialized technical content aimed at software development.</b></p>
+            <p>In the <b>Demos</b> section there are various micro developments that cover in a simple way various web development technologies, where various issues are revealed, such as: application architecture, UI design, data modeling, configuration, coding, quality, testing and implementation among others.</p>
+            <p>In the <b>Videos-Tech</b> section there are various technical examples that focus on specific scenarios.</p>
+            <p>Each development is accompanied by its explanation on my <b>YouTube channel</b> and the source code available on <b>GitHub</b></p>
         </article>
     </section>
     <section id="demos" class="demos section">
