--- a/index.html
+++ b/index.html
@@ -111,15 +111,12 @@
             <p>
                 Evaluación de RFC y elaboración de Propuestas Técnicas.
             </p>
-            <div class="text-center text-lg-center">
-                <a class="btn" href="assets/es/CV Online-es.pdf" target="_blank" rel="noopener">Descargar CV</a>
-            </div>
         </article>
-        <article class="video-about">
-            <video width="100%" height="auto" controls>
-                <source src="assets/es/main-video-es.mp4" type="video/mp4">
-                Tu navegador no soporta la exposicion de video.
-            </video>   
+        <article class="text-center text-lg-center article-about">
+                <p><b>Espacio  destinado a compartir contenido técnico especializado orientado al desarrollo de software</b></p>
+                <p>En la sección <b>Demos</b> se encuentran diversos micro desarrollos que abarcan de una manera sencilla diversas tecnologías de desarrollo web, donde se ponen de manifiesto diversas cuestiones, como ser: arquitectura aplicativa, diseño de UI, modelado de datos, configuración, codificación, calidad, testing e implementación entre otras.</p>
+                <p>En la sección <b>Videos-Tech</b> se encuentran diversos ejemplos técnicos que ponen el foco en escenarios puntuales</p>
+                <p>Cada desarrollo viene acompañado de su explicación en mi <b>canal de youtube</b> y del código fuente disponible en <b>GitHub</b> </p>
         </article>
     </section>
     <section id="demos" class="demos section">
