Add tech video modules

--- a/en/index.html
+++ b/en/index.html
@@ -617,6 +617,11 @@
                         <img src="../assets/task-manager-scheduler.jpg" alt="Tech #6">
                     </a>
                 </article>
+                <article class="article-tech">
+                    <a href="https://youtu.be/2BHBzT17CRM" class="demo-card" target="_blank" rel="noopener">
+                        <img src="../assets/module-presentation.jpg" alt="Tech #6">
+                    </a>
+                </article>
             </div>
         </div>
     </section>
